--- a/amazon.html
+++ b/amazon.html
@@ -16,31 +16,120 @@
 <body class="bg-gradient-to-r from-blue-300 to-green-300 h-64 w-full font-sans">
 
   <!-- Header -->
-  <nav class="bg-amazon-blue p-4">
+  <nav class="bg-amazon-blue p-2 px-4 fixed min-w-[99vw]">
     <div class="flex items-center justify-between">
       <!-- Logo -->
       <a href="/" class="text-white text-2xl font-bold">Amazon</a>
-
+      <div class="flex ml-2 hover:border border-white cursor-pointer p-1">
+        <div class="text-white mt-2">
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+            stroke="currentColor" class="size-6">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M15 10.5a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
+            <path stroke-linecap="round" stroke-linejoin="round"
+              d="M19.5 10.5c0 7.142-7.5 11.25-7.5 11.25S4.5 17.642 4.5 10.5a7.5 7.5 0 1 1 15 0Z" />
+          </svg>
+        </div>
+        <div class="flex flex-col ml-1 hidden md:block">
+          <div class="text-[12px] text-white">
+            Deliver to
+          </div>
+          <div class="text-sm text-white font-semibold -mt-1">
+            India
+          </div>
+        </div>
+      </div>
       <!-- Search Bar -->
       <div class="relative flex items-center flex-grow mx-4">
         <input type="text" placeholder="Search" class="w-full p-2 rounded-l-md">
-        <button class="hover:bg-yellow-500 bg-yellow-400 text-white p-2 rounded-r-md">
-          🔍
+        <button class="hover:bg-yellow-500 bg-amber-300 p-2 rounded-r-md">
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+            stroke="currentColor" class="size-6">
+            <path stroke-linecap="round" stroke-linejoin="round"
+              d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z" />
+          </svg>
         </button>
       </div>
 
       <!-- Links and Menu -->
       <div class="flex items-center space-x-6 text-white">
-        <a href="#" class="hover:underline">Hello, Sign in</a>
-        <a href="#" class="hover:underline">Returns & Orders</a>
-        <a href="#" class="hover:underline">Cart</a>
+        <a href="#" class="hover:border border-white p-1">
+          <div class="flex flex-col ml-1 hidden md:block">
+            <div class="text-[12px] text-white">
+              Hello, Sign in
+            </div>
+            <div class="text-sm text-white font-semibold -mt-1">
+              Account & Lists
+            </div>
+          </div>
+          <span class="text-white block md:hidden">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+              stroke="currentColor" class="size-6">
+              <path stroke-linecap="round" stroke-linejoin="round"
+                d="M15.75 6a3.75 3.75 0 1 1-7.5 0 3.75 3.75 0 0 1 7.5 0ZM4.501 20.118a7.5 7.5 0 0 1 14.998 0A17.933 17.933 0 0 1 12 21.75c-2.676 0-5.216-.584-7.499-1.632Z" />
+            </svg>
+          </span>
+        </a>
+        <a href="#" class="hover:border border-white hidden md:block">
+          <div class="flex flex-col ml-1">
+            <span class="text-[12px] text-white">
+              Returns
+            </span>
+            <span class="text-sm text-white font-semibold -mt-1">
+              & Orders
+            </span>
+          </div>
+        </a>
+        <a href="#" class="hover:underline">
+          <div class="flex">
+            <span class="text-white mr-1">
+              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                stroke="currentColor" class="size-6">
+                <path stroke-linecap="round" stroke-linejoin="round"
+                  d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
+              </svg>
+            </span>
+            <span class="font-semibold hidden md:block">
+              Cart
+            </span>
+          </div>
+        </a>
+      </div>
+    </div>
+  </nav>
+
+  <!-- Nav Main -->
+  <nav class="bg-slate-900 min-h-[70px] p-2 px-4">
+    <div class="flex pt-14 text-white gap-6">
+      <div class="flex cursor-pointer text-sm">
+        <span class="mr-2">
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+            stroke="currentColor" class="size-6">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
+          </svg>
+        </span>
+        All
+      </div>
+      <div class="cursor-pointer text-sm">
+        Today's Deal
+      </div>
+      <div class="cursor-pointer text-sm">
+        Registry
+      </div>
+      <div class="cursor-pointer text-sm">
+        Customer Service
+      </div>
+      <div class="cursor-pointer text-sm">
+        Gift Card
+      </div>
+      <div class="cursor-pointer text-sm">
+        Sell
       </div>
     </div>
   </nav>
 
   <!-- Main Content (Product Listing) -->
   <main class="p-8">
-    <h2 class="text-4xl font-semibold text-gray-800 mb-6 text-center py-10">Shop Amazon Devices with Alexa</h2>
+    <h2 class="text-4xl font-semibold text-gray-800 mb-6 text-center py-10">Shop CodingMSTR Devices with Alexa</h2>
     <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-8">
       <!-- Product 1 -->
       <div class="bg-white border rounded-lg shadow-lg overflow-hidden">
@@ -182,7 +271,7 @@
     </div>
 
     <div class="text-center text-sm mt-10 text-gray-400">
-      <p>&copy; 2025 Amazon.com, Inc. or its affiliates</p>
+      <p>&copy; 2025 CodingMSTR.com, Inc. or its affiliates</p>
       <div class="mt-4">
         <a href="#" class="text-gray-300 hover:underline text-sm mx-2">Privacy Notice</a>
         <a href="#" class="text-gray-300 hover:underline text-sm mx-2">Conditions of Use</a>
