--- a/amazon.html
+++ b/amazon.html
@@ -52,23 +52,57 @@
 
       <!-- Links and Menu -->
       <div class="flex items-center space-x-6 text-white">
-        <a href="#" class="hover:border border-white p-1">
-          <div class="flex flex-col ml-1 hidden md:block">
+        <!-- Container -->
+        <div class="relative inline-block text-left">
+          <!-- Clickable Area -->
+          <div id="menuButton" class="flex flex-col ml-1 cursor-pointer hidden md:block">
             <div class="text-[12px] text-white">
               Hello, Sign in
             </div>
-            <div class="text-sm text-white font-semibold -mt-1">
+            <div class="text-sm text-white font-semibold -mt-1 flex items-center">
               Account & Lists
+              <span class="text-[8px] mt-1 ml-1">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                  stroke="currentColor" class="w-4 h-4">
+                  <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
+                </svg>
+              </span>
             </div>
           </div>
-          <span class="text-white block md:hidden">
-            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-              stroke="currentColor" class="size-6">
-              <path stroke-linecap="round" stroke-linejoin="round"
-                d="M15.75 6a3.75 3.75 0 1 1-7.5 0 3.75 3.75 0 0 1 7.5 0ZM4.501 20.118a7.5 7.5 0 0 1 14.998 0A17.933 17.933 0 0 1 12 21.75c-2.676 0-5.216-.584-7.499-1.632Z" />
-            </svg>
-          </span>
-        </a>
+
+          <!-- Dropdown Menu -->
+          <div id="dropdownMenu" class="absolute mt-2 w-96 bg-white text-black rounded-md shadow-lg z-50 hidden p-4 -ml-32">
+            <div class="grid grid-cols-2 text-sm">
+
+              <!-- Left Column -->
+              <ul class="space-y-1 pr-4 border-r border-gray-300">
+                <li><a href="#" class="block px-2 py-1 hover:bg-slate-100 rounded">Your Account</a></li>
+                <li><a href="#" class="block px-2 py-1 hover:bg-slate-100 rounded">Orders</a></li>
+                <li><a href="#" class="block px-2 py-1 hover:bg-slate-100 rounded">Wishlist</a></li>
+                <li><a href="#" class="block px-2 py-1 hover:bg-slate-100 rounded">Prime Membership</a></li>
+                <li><a href="#" class="block px-2 py-1 hover:bg-slate-100 rounded">Recommendations</a></li>
+              </ul>
+
+              <!-- Right Column -->
+              <ul class="space-y-1 pl-4">
+                <li><a href="#" class="block px-2 py-1 hover:bg-slate-100 rounded">Your Addresses</a></li>
+                <li><a href="#" class="block px-2 py-1 hover:bg-slate-100 rounded">Payment Methods</a></li>
+                <li><a href="#" class="block px-2 py-1 hover:bg-slate-100 rounded">Gift Cards</a></li>
+                <li><a href="#" class="block px-2 py-1 hover:bg-slate-100 rounded">Login & Security</a></li>
+                <li><a href="#" class="block px-2 py-1 hover:bg-slate-100 rounded">Messages</a></li>
+              </ul>
+
+            </div>
+          </div>
+
+        </div>
+        <span class="text-white block md:hidden">
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+            stroke="currentColor" class="size-6">
+            <path stroke-linecap="round" stroke-linejoin="round"
+              d="M15.75 6a3.75 3.75 0 1 1-7.5 0 3.75 3.75 0 0 1 7.5 0ZM4.501 20.118a7.5 7.5 0 0 1 14.998 0A17.933 17.933 0 0 1 12 21.75c-2.676 0-5.216-.584-7.499-1.632Z" />
+          </svg>
+        </span>
         <a href="#" class="hover:border border-white hidden md:block">
           <div class="flex flex-col ml-1">
             <span class="text-[12px] text-white">
@@ -161,7 +195,7 @@
         <h3 class="text-xl font-semibold p-2">Shop Amazon exclusive toys</h3>
         <img src="img/1.jpg" alt="Product" class="w-full h-64 object-cover">
         <div class="p-4">
-          <p class="text-blue-500 text-sm">See more toys and games</p>
+          <p class="text-blue-500 text-sm cursor-pointer">See more toys and games</p>
         </div>
       </div>
 
@@ -171,7 +205,7 @@
         <h3 class="text-xl font-semibold p-2">Shop 450+ gift card brands</h3>
         <img src="img/2.jpg" alt="Product" class="w-full h-64 object-cover">
         <div class="p-4">
-          <p class="text-blue-500 text-sm">See all gift cards</p>
+          <p class="text-blue-500 text-sm cursor-pointer">See all gift cards</p>
         </div>
       </div>
 
@@ -180,7 +214,7 @@
         <h3 class="text-xl font-semibold p-2">Customers' most-loved</h3>
         <img src="img/3.jpg" alt="Product" class="w-full h-64 object-cover">
         <div class="p-4">
-          <p class="text-blue-500 text-sm">Discover item with 4+ stars</p>
+          <p class="text-blue-500 text-sm cursor-pointer">Discover item with 4+ stars</p>
         </div>
       </div>
 
@@ -189,7 +223,7 @@
         <h3 class="text-xl font-semibold p-2">Shop Amazon exclusive toys</h3>
         <img src="img/4.jpg" alt="Product" class="w-full h-64 object-cover">
         <div class="p-4">
-          <p class="text-blue-500 text-sm">See more toys and games</p>
+          <p class="text-blue-500 text-sm cursor-pointer">See more toys and games</p>
         </div>
       </div>
 
@@ -199,7 +233,7 @@
         <h3 class="text-xl font-semibold p-2">Save on pre-owned Amazon</h3>
         <img src="img/5.jpg" alt="Product" class="w-full h-64 object-cover">
         <div class="p-4">
-          <p class="text-blue-500 text-sm">See all pre-owned devices</p>
+          <p class="text-blue-500 text-sm cursor-pointer">See all pre-owned devices</p>
         </div>
       </div>
 
@@ -208,7 +242,7 @@
         <h3 class="text-xl font-semibold p-2">Live plants & planters</h3>
         <img src="img/6.jpg" alt="Product" class="w-full h-64 object-cover">
         <div class="p-4">
-          <p class="text-blue-500 text-sm">Shop plants, plant care & pots</p>
+          <p class="text-blue-500 text-sm cursor-pointer">Shop plants, plant care & pots</p>
         </div>
       </div>
 
@@ -217,7 +251,7 @@
         <h3 class="text-xl font-semibold p-2">Easy, elevated t-shirts</h3>
         <img src="img/7.jpg" alt="Product" class="w-full h-64 object-cover">
         <div class="p-4">
-          <p class="text-blue-500 text-sm">See the full edit from Shopbop</p>
+          <p class="text-blue-500 text-sm cursor-pointer">See the full edit from Shopbop</p>
         </div>
       </div>
 
@@ -226,7 +260,7 @@
         <h3 class="text-xl font-semibold p-2">Small space solutions</h3>
         <img src="img/8.jpg" alt="Product" class="w-full h-64 object-cover">
         <div class="p-4">
-          <p class="text-blue-500 text-sm">Shop small space furniture & décor</p>
+          <p class="text-blue-500 text-sm cursor-pointer">Shop small space furniture & décor</p>
         </div>
       </div>
 
@@ -325,6 +359,23 @@
     overlay.addEventListener('click', () => {
       sidebar.classList.add('-translate-x-full');
       overlay.classList.add('hidden');
+    });
+  </script>
+
+  <!-- Script to toggle dropdown -->
+  <script>
+    const menuButton = document.getElementById("menuButton");
+    const dropdownMenu = document.getElementById("dropdownMenu");
+
+    menuButton.addEventListener("click", () => {
+      dropdownMenu.classList.toggle("hidden");
+    });
+
+    // Optional: Close dropdown if clicked outside
+    window.addEventListener("click", function (e) {
+      if (!menuButton.contains(e.target) && !dropdownMenu.contains(e.target)) {
+        dropdownMenu.classList.add("hidden");
+      }
     });
   </script>
 
